--- a/01-your-first-neural-network.ipynb
+++ b/01-your-first-neural-network.ipynb
@@ -30,6 +30,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Downloading the data\n",
+    "Run the following cell once to download and extract the data. This can take a minute or two."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!bash download.sh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Loading the data\n",
     "In the next cell, we load a subset of the [original data set](https://www.kaggle.com/emmarex/plantdisease) on plant disease classification. We have made the images smaller in order to keep the training time of the network manageable.\n",
     "\n",
